Unstable version (There is bug with icosahedron).

--- a/GiftWrapping/GiftWrapping.vcxproj
+++ b/GiftWrapping/GiftWrapping.vcxproj
@@ -71,6 +71,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\boost_1_63_0\;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\boost_1_63_0\vs2015\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -142,6 +144,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="MathVector.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MathVector.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="plot3D.py" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
