4d is working. Was added 4d visualization.

--- a/GiftWrapping/GiftWrapping.vcxproj
+++ b/GiftWrapping/GiftWrapping.vcxproj
@@ -151,7 +151,7 @@
     <ClInclude Include="MathVector.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="plot3D.py" />
+    <None Include="plot_3D4D.py" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
